--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -19,6 +19,23 @@
         "design",
         "research"
       ]
+    },
+    {
+      "login": "shhdharmen",
+      "name": "Dharmen Shah",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6831283?v=4",
+      "profile": "https://github.com/shhdharmen",
+      "contributions": [
+        "code",
+        "content",
+        "doc",
+        "example",
+        "ideas",
+        "infra",
+        "maintenance",
+        "platform",
+        "projectManagement"
+      ]
     }
   ],
   "contributorsPerLine": 7,
