--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,14 +14,18 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: "20.x"
 
-      - name: NPM install, build, release and deploy
+      - name: Install dependencies
+        env:
+          HUSKY_SKIP_INSTALL: true
+        run: npm ci
+
+      - name: NPM build, release and deploy
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          npm ci
           npm run build:lib
           npm run build -- --base-href "/coolshapes/"
           npx semantic-release
