--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -33,4 +33,4 @@ jobs:
           npm run build:lib
           npm run build -- --base-href "/coolshapes/"
           # npm run test
-          npx semantic-release --debug
+          npx semantic-release --debug --no-verify
