ci: add skip hook in build

--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -22,13 +22,14 @@ jobs:
         if: steps.npm-cache.outputs.cache-hit != 'true'
         env:
           HUSKY_SKIP_INSTALL: true
-          HUSKY_SKIP_HOOKS: 1
+          HUSKY_SKIP_HOOKS: true
         run: npm ci
 
       - name: Lint, build, test and release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          HUSKY_SKIP_HOOKS: true
         run: |
           npm run lint
           npm run build:lib
