--- a/projects/ngxpert/coolshapes/package.json
+++ b/projects/ngxpert/coolshapes/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@ngxpert/coolshapes",
   "version": "0.0.1",
+  "scripts": {
+    "postpublish": "cpx package.json ../../../../../projects/ngxpert/coolshapes/ && cpx npm-shrinkwrap.json ../../../../../projects/ngxpert/coolshapes/"
+  },
   "peerDependencies": {
     "@angular/common": "^17.3.0",
     "@angular/core": "^17.3.0"
