--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jasmine": "~5.1.0",
     "all-contributors-cli": "^6.26.1",
     "angular-cli-ghpages": "^2.0.0-beta.2",
+    "cpx": "^1.5.0",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.0.11",
     "jasmine-core": "~5.1.0",
