feat: update ng to 18
BREAKING CHANGE: update ng to 18

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,18 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
+/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
+/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
   "compileOnSave": false,
   "compilerOptions": {
     "paths": {
-      "@ng-doc/generated": ["./ng-doc/coolshapes/index.ts"],
-      "@ng-doc/generated/*": ["./ng-doc/coolshapes/*"],
-      "@ngxpert/coolshapes": ["./dist/ngxpert/coolshapes"]
+      "@ng-doc/generated": [
+        "./ng-doc/coolshapes/index.ts"
+      ],
+      "@ng-doc/generated/*": [
+        "./ng-doc/coolshapes/*"
+      ],
+      "@ngxpert/coolshapes": [
+        "./dist/ngxpert/coolshapes"
+      ]
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
@@ -14,17 +21,19 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
+    "isolatedModules": true,
     "esModuleInterop": true,
     "sourceMap": true,
     "declaration": false,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "useDefineForClassFields": false,
-    "lib": ["ES2022", "dom"],
-    "baseUrl": "."
+    "lib": [
+      "ES2022",
+      "dom"
+    ]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
