--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@angular/animations": "^18.2.1",
-    "@angular/common": "^18.2.1",
-    "@angular/compiler": "^18.2.1",
-    "@angular/core": "^18.2.1",
-    "@angular/forms": "^18.2.1",
-    "@angular/platform-browser": "^18.2.1",
-    "@angular/platform-browser-dynamic": "^18.2.1",
-    "@angular/router": "^18.2.1",
-    "@ng-doc/app": "17.6.7",
-    "@ng-doc/builder": "17.6.7",
-    "@ng-doc/core": "17.6.7",
-    "@ng-doc/ui-kit": "17.6.7",
+    "@angular/animations": "^18.2.0",
+    "@angular/common": "^18.2.0",
+    "@angular/compiler": "^18.2.0",
+    "@angular/core": "^18.2.0",
+    "@angular/forms": "^18.2.0",
+    "@angular/platform-browser": "^18.2.0",
+    "@angular/platform-browser-dynamic": "^18.2.0",
+    "@angular/router": "^18.2.0",
+    "@ng-doc/app": "18.0.1",
+    "@ng-doc/builder": "18.0.1",
+    "@ng-doc/core": "18.0.1",
+    "@ng-doc/ui-kit": "18.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -41,27 +41,27 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.1",
     "@angular/cli": "^18.2.1",
-    "@angular/compiler-cli": "^18.2.1",
-    "@commitlint/cli": "^19.3.0",
+    "@angular/compiler-cli": "^18.2.0",
+    "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/jasmine": "~5.1.0",
     "all-contributors-cli": "^6.26.1",
-    "angular-cli-ghpages": "^2.0.0-beta.2",
+    "angular-cli-ghpages": "^2.0.1",
     "cpx": "^1.5.0",
     "cz-conventional-changelog": "^3.3.0",
-    "husky": "^9.0.11",
-    "jasmine-core": "~5.1.0",
+    "husky": "^9.1.5",
+    "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^18.2.1",
-    "semantic-release": "^23.0.8",
+    "ng-packagr": "^18.2.0",
+    "semantic-release": "^24.1.0",
     "svg-to-ts": "^12.0.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.5.2"
   },
   "config": {
     "commitizen": {
