--- a/projects/ngxpert/coolshapes/package.json
+++ b/projects/ngxpert/coolshapes/package.json
@@ -5,8 +5,8 @@
     "postpublish": "cpx package.json ../../../../../projects/ngxpert/coolshapes/ && cpx npm-shrinkwrap.json ../../../../../projects/ngxpert/coolshapes/"
   },
   "peerDependencies": {
-    "@angular/common": ">=18.0.0",
-    "@angular/core": ">=18.0.0"
+    "@angular/common": ">=18.0.0 < 19",
+    "@angular/core": ">=18.0.0 < 19"
   },
   "dependencies": {
     "tslib": "^2.3.0"
